# quantpoly_new

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  conftest.py  docker-compose.backend-dev.yml  docker-compose.coolify.local.yml  docker-compose.coolify.yml  docker-compose.yml  pytest.ini
libs/admin_governance/: pyproject.toml
libs/admin_governance/admin_governance/: __init__.py  audit.py  catalog.py  cli.py  domain.py  policy.py  token.py
libs/admin_governance/tests/: test_catalog_admin_user_provisioning.py  test_cli.py  test_integration_signal_execution.py  test_integration_trading_account.py  test_integration_trading_operations.py  test_integration_user_auth.py  test_integration_user_auth_admin_provisioning.py  test_policy.py
libs/backtest_runner/: pyproject.toml
libs/backtest_runner/backtest_runner/: __init__.py  api.py  cli.py  domain.py  orchestration.py  repository.py  repository_postgres.py  repository_sqlite.py  result_store.py  result_store_postgres.py  result_store_sqlite.py  service.py
libs/backtest_runner/tests/: test_api.py  test_api_backtest_engine_parity.py  test_api_backtest_management_readmodel_parity.py  test_api_domain_task_parity.py  test_api_lifecycle.py  test_callback_signature_break_update.py  test_cli.py  test_cli_backtest_engine_parity.py  test_cli_backtest_management_readmodel_parity.py  test_cli_lifecycle.py  test_domain.py  test_job_orchestration_integration.py  test_lifecycle_statistics.py  test_repository_sqlite.py  test_strategy_linkage_delete.py
libs/data_topology_boundary/: pyproject.toml
libs/data_topology_boundary/data_topology_boundary/: __init__.py  catalog.py  cli.py  migration.py  policy.py  reconciliation.py
libs/data_topology_boundary/tests/: test_cli.py  test_domain.py
libs/job_orchestration/: pyproject.toml
libs/job_orchestration/job_orchestration/: __init__.py  api.py  celery_adapter.py  cli.py  domain.py  executor.py  repository.py  repository_postgres.py  repository_sqlite.py  scheduler.py  service.py  task_registry.py
libs/job_orchestration/tests/: test_adapter.py  test_api_domain_task_parity.py  test_cli.py  test_domain.py  test_persistence_uow.py  test_repository_sqlite.py  test_runtime_executor.py
libs/market_data/: pyproject.toml
libs/market_data/market_data/: __init__.py  alpaca_provider.py  alpaca_transport.py  api.py  cache.py  cli.py  domain.py  pipeline_store.py  provider.py  rate_limit.py  service.py  stream_gateway.py
libs/market_data/tests/: test_alpaca_live_transport_runtime.py  test_alpaca_transport_catalog_cache.py  test_api.py  test_api_catalog_batch_latest.py  test_api_catalog_detail_filter_parity.py  test_api_indicator_suite_parity.py  test_api_market_data_pipeline_automation_parity.py  test_api_stream_gateway.py  test_catalog_batch_latest.py  test_catalog_detail_filter_parity.py  test_cli.py  test_cli_catalog_batch_health.py  test_cli_catalog_detail_filter_parity.py  test_cli_indicator_suite_parity.py  test_cli_market_data_pipeline_automation_parity.py  test_domain.py  test_provider_health_and_degradation.py  test_stream_gateway.py
libs/monitoring_realtime/: conftest.py  pyproject.toml
libs/monitoring_realtime/monitoring_realtime/: __init__.py  app.py  cli.py  read_model.py
libs/monitoring_realtime/tests/: test_cli.py  test_summary_api.py  test_summary_operational_model.py  test_summary_signal_semantics_parity.py  test_summary_ws_semantics.py  test_ws_alert_notification_task_semantics.py  test_ws_auth.py  test_ws_protocol.py
libs/platform_core/: pyproject.toml
libs/platform_core/platform_core/: __init__.py  authz.py  callback_contract.py  capability_gate.py  cli.py  config.py  logging.py  ownership.py  response.py  schema.py  storage_contract_gate.py  uow.py
libs/platform_core/tests/: test_authz.py  test_cli.py  test_cli_capability_gate.py  test_cli_storage_contract_gate.py  test_config.py  test_fastapi_exception_handlers.py  test_logging.py  test_ownership.py  test_response.py  test_schema.py
libs/risk_control/: pyproject.toml
libs/risk_control/risk_control/: __init__.py  api.py  cli.py  domain.py  repository.py  repository_postgres.py  repository_sqlite.py  service.py
libs/risk_control/tests/: test_api.py  test_api_assessment_snapshot_evaluate.py  test_api_domain_task_parity.py  test_api_risk_query_parity.py  test_api_risk_reporting_automation_parity.py  test_api_rule_lifecycle.py  test_cli.py  test_cli_assessment_snapshot_evaluate.py  test_cli_risk_query_parity.py  test_cli_risk_reporting_automation_parity.py  test_cli_rule_lifecycle.py  test_domain.py  test_repository_sqlite.py  test_risk_assessment_views.py  test_rule_lifecycle.py  test_service_sqlite_persistence_adapter.py
libs/signal_execution/: pyproject.toml
libs/signal_execution/signal_execution/: __init__.py  api.py  cli.py  domain.py  repository.py  repository_postgres.py  repository_sqlite.py  service.py
libs/signal_execution/tests/: test_api.py  test_api_batch_maintenance.py  test_api_domain_task_parity.py  test_api_execution_control_parity.py  test_api_execution_history_retention_governance.py  test_api_generate_by_strategy_parity.py  test_api_signal_query_parity.py  test_api_strategy_execution_query_readmodel.py  test_api_strategy_performance_stats_parity.py  test_api_strategy_signal_automation_parity.py  test_batch_operations.py  test_cli.py  test_domain.py  (+15 more)
libs/strategy_health/: pyproject.toml
libs/strategy_management/: pyproject.toml
libs/user_auth/: conftest.py  pyproject.toml
(+833 files in other folders)
