[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "admin-governance"
version = "0.1.0"
description = "QuantPoly 管理员治理上下文库"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
admin-governance = "admin_governance.cli:main"
