[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backtest-runner"
version = "0.1.0"
description = "QuantPoly 回测任务运行库"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "fastapi>=0.100",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "httpx>=0.24",
]

[project.scripts]
backtest-runner = "backtest_runner.cli:main"
