[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-orchestration"
version = "0.1.0"
description = "QuantPoly 任务编排上下文库"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "fastapi>=0.100",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "httpx>=0.24",
]

[project.scripts]
job-orchestration = "job_orchestration.cli:main"
