[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monitoring-realtime"
version = "0.1.0"
description = "QuantPoly 实时监控（WebSocket）库"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100",
    "user-auth>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]

[project.scripts]
monitoring-realtime = "monitoring_realtime.cli:main"
