[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "risk-control"
version = "0.1.0"
description = "QuantPoly 风险控制上下文库"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "fastapi>=0.100",
  "job-orchestration>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "httpx>=0.24",
]

[project.scripts]
risk-control = "risk_control.cli:main"
