[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signal-execution"
version = "0.1.0"
description = "QuantPoly 信号执行上下文库"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "fastapi>=0.100",
  "job-orchestration>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "httpx>=0.24",
]

[project.scripts]
signal-execution = "signal_execution.cli:main"
